# openxr-simple-example

./: .clang-format  .gitignore  CMakeLists.txt  OpenXRExample.kdev4  README.md  Readme.md  Readme_ori.md  glimpl.c  glimpl.cpp  glimpl.h  main.c  main.cpp  math_3d.h  openxr-simple-example.sln  openxr-simple-example.vcxproj  openxr-simple-example.vcxproj.filters  xrmath.h
